2009-05-24  Richard Guenther  <rguenther@suse.de>

PR middle-end/40233
	* tree.c (make_vector_type): Build the TYPE_DEBUG_REPRESENTATION_TYPEs
	array type from the main variant of the inner type.

	* gcc.c-torture/compile/pr40233.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@147835 138bc75d-0d04-0410-961f-82ee72b054a4